Add qmake generated files to .gitignore.
Add source files generated by qmake for automatic static plugin
imports to .gitignore.

Change-Id: I38977c5d410e1dc9f424de39c88a9fcd281d1e69
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ src/multimediawidgets/qtmultimediawidgetsversion.h
 tst_*
 !tst_*.cpp
 tests/auto/cmake/build
+
+# Generated static plugin import sources
+*_plugin_import.cpp
