--- a/tests/global/global.cfg
+++ b/tests/global/global.cfg
@@ -1,5 +1,6 @@
 <config>
 <modules>
-<module name="QtMultimedia" qtname="multimedia"/>
+<module name="QtMultimedia"        qtname="multimedia"/>
+<module name="QtMultimediaWidgets" qtname="multimediawidgets"/>
 </modules>
 </config>
