Test the cmake multimediawidgets module only if widgets is available.
Change-Id: I381e1b0883fb4fdc68627848ee39a26ce22e2ba5
Reviewed-by: Alexander Neundorf <neundorf@kde.org>
Reviewed-by: Stephen Kelly <stephen.kelly@kdab.com>

--- a/tests/auto/cmake/CMakeLists.txt
+++ b/tests/auto/cmake/CMakeLists.txt
@@ -9,7 +9,16 @@ find_package(Qt5Core REQUIRED)
 
 include("${_Qt5CTestMacros}")
 
+set(qt_module_includes
+    Multimedia QCamera
+)
+
+if (NOT NO_WIDGETS)
+    list(APPEND qt_module_includes
+        MultimediaWidgets QVideoWidget
+    )
+endif()
+
 test_module_includes(
-  Multimedia QCamera
-  MultimediaWidgets QVideoWidget
+    ${qt_module_includes}
 )
