Use QT_CONFIG macro to check for features
And remove many custom defines.

Change-Id: I658cc8430d1d99ed3c0aafe03a77adce76621a29
Reviewed-by: Yoann Lopes <yoann.lopes@qt.io>

--- a/src/multimedia/configure.json
+++ b/src/multimedia/configure.json
@@ -282,7 +282,7 @@
         "wmsdk": {
             "label": "wmsdk.h",
             "condition": "config.win32 && tests.wmsdk",
-            "output": [ "feature", "privateFeature" ]
+            "output": [ "privateFeature" ]
         },
         "wshellitem": {
             "label": "WShellItem",
