Update label for backend test
The "backend for Qt Multimedia" string is just redundant information
causing noise and formatting of configure to be broken.

Change-Id: Iac0e7a675640e70ab7f11180b2059c61949272b9
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/configure.json
+++ b/src/multimedia/configure.json
@@ -282,7 +282,7 @@
             "output": [ "feature", "privateFeature" ]
         },
         "wmf-backend": {
-            "label": "Windows Media Foundation backend for Qt Multimedia",
+            "label": "Windows Media Foundation",
             "emitIf": "config.win32",
             "autoDetect": false,
             "condition": "libraries.wmf",
