--- a/src/multimedia/configure.json
+++ b/src/multimedia/configure.json
@@ -275,7 +275,6 @@
         },
         "wasapi": {
             "label": "Windows Audio Services",
-            "autoDetect": "false",
             "condition": "config.win32 && tests.wasapi",
             "output": [ "privateFeature" ]
         },
@@ -319,6 +318,7 @@
                 "resourcepolicy",
                 "mmrenderer",
                 "avfoundation",
+                "wasapi",
                 "directshow",
                 "wmf",
                 {
