Gstreamer: Introduce support of OpenGL plugin
Since uploading to gl texture is quite performance-wise operation
introduced integration of opengl plugin which can provide a way
to avoid uploading to texture on each draw on qt's side.
Which potentially fixes some performance issues especially on embedded devices.

Added glupload and glcolorconvert gst elements to pipeline.
For qml apps current opengl context is provided to the gst plugin to share opengl data with.
It allows at the end to just use gl textures that created and filled inside the gst.

For overlay apps, glimagesink element is added.

Requires gstreamer-gl-1.0 to be installed.
Since this plugin is almost always available, so enabling it by default will break behavior of current pipeline
and might introduce some side effects.
Thus also provided QT_GSTREAMER_USE_OPENGL_PLUGIN env var to explicitly enable OpenGL features from gst.

After this change video frames will be texture based.
But it is still possible to map frames to download their data.

In case if the video surface does not support gl textures,
glmemory will be anyway requested, which will lead to uploading data, downloading
and uploading it again to textures in scene graph video node.

Task-number: QTBUG-66162
Change-Id: I32044ba0bf0c0cf90434d72f8991ad00927e1380
Reviewed-by: Christian Strømme <christian.stromme@qt.io>

--- a/src/multimedia/configure.json
+++ b/src/multimedia/configure.json
@@ -95,6 +95,17 @@
                 { "libs": "-lgstphotography-1.0" }
             ]
         },
+        "gstreamer_gl_1_0": {
+            "label": "GStreamer OpenGL 1.0",
+            "export": "gstreamer_gl",
+            "test":  {
+                "include": "gst/gl/gl.h"
+            },
+            "use": "gstreamer_1_0",
+            "sources": [
+                { "type": "pkgConfig", "args": "gstreamer-gl-1.0" }
+            ]
+        },
         "libresourceqt5": {
             "label": "libresourceqt5",
             "test": "resourcepolicy",
@@ -227,6 +238,11 @@
         "gstreamer_photography": {
             "label": "GStreamer Photography",
             "condition": "(features.gstreamer_1_0 && libs.gstreamer_photography_1_0) || (features.gstreamer_0_10 && libs.gstreamer_photography_0_10)",
+            "output": [ "privateFeature" ]
+        },
+        "gstreamer_gl": {
+            "label": "GStreamer OpenGL",
+            "condition": "features.gstreamer_1_0 && libs.gstreamer_gl_1_0",
             "output": [ "privateFeature" ]
         },
         "gpu_vivante": {
