Add more generated files to .gitignore
Change-Id: Icc776e45c827df33cb8f1c3750ea8177c038cbcd
Reviewed-by: VaL Doroshchuk <valentyn.doroshchuk@qt.io>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 Makefile*
+*.pch
 *.pdb
 *.exe
 *.dll
@@ -15,12 +16,16 @@ qrc_*.cpp
 *.moc
 .qmake.cache
 config.log
-*.pro.user
+*.pro.user*
 tmp
 *.o
 *.app
 *.dylib
 *.framework
+*_wrapper.*
+*-config.*
+*-config_p.h
+*.version*
 
 #
 # Includes
