configure: add option to allow building without evr support
Because of issue QTBUG-53019, the performance of an application playing a
video on windows is sometimes just a few fps. The issue seems to
be related to EVR on some hardware, and appeared in commit c739752.
This patch allows building the qtmultimedia module without EVR.

Task-number: QTBUG-53019
Change-Id: I1166e633dd02e93047fa72b0ac156ae615ab67ec
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>

--- a/src/multimedia/configure.json
+++ b/src/multimedia/configure.json
@@ -8,6 +8,7 @@
     "commandline": {
         "options": {
             "alsa": "boolean",
+            "evr": { "type": "boolean" },
             "gstreamer": { "type": "optionalString", "values": [ "no", "yes", "0.10", "1.0" ] },
             "pulseaudio": "boolean",
             "mediaplayer-backend": { "type": "string", "values": [ "directshow", "wmf" ] },
