--- a/src/multimedia/configure.json
+++ b/src/multimedia/configure.json
@@ -53,7 +53,9 @@
             "test": "gstreamer",
             "sources": [
                 { "type": "pkgConfig",
-                  "args": "gstreamer-1.0 gstreamer-base-1.0 gstreamer-audio-1.0 gstreamer-video-1.0 gstreamer-pbutils-1.0" }
+                  "args": "gstreamer-1.0 gstreamer-base-1.0 gstreamer-audio-1.0 gstreamer-video-1.0 gstreamer-pbutils-1.0" },
+                { "libs": "-lgstreamer-1.0 -lgstbase-1.0 -lgstaudio-1.0 -lgstvideo-1.0 -lgstpbutils-1.0 -lglib-2.0 -lgobject-2.0",
+                  "condition": "config.win32 || config.macos" }
             ]
         },
         "gstreamer_app_0_10": {
@@ -71,7 +73,8 @@
             "test": "gstreamer_appsrc",
             "use": "gstreamer_1_0",
             "sources": [
-                { "type": "pkgConfig", "args": "gstreamer-app-1.0" }
+                { "type": "pkgConfig", "args": "gstreamer-app-1.0" },
+                { "libs": "-lgstapp-1.0", "condition": "config.win32 || config.macos" }
             ]
         },
         "gstreamer_photography_0_10": {
