Allow disabling directshow or wmf plugin
Directshow or wmf now could be disabled by -no-directshow or -no-wmf
within configuring.

Change-Id: I5408f8b5ff0fcaa18da2b15df637eb04effecff1
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>

--- a/src/multimedia/configure.json
+++ b/src/multimedia/configure.json
@@ -9,6 +9,8 @@
         "options": {
             "alsa": "boolean",
             "evr": { "type": "boolean" },
+            "directshow": { "type": "boolean" },
+            "wmf": { "type": "boolean" },
             "gstreamer": { "type": "optionalString", "values": [ "no", "yes", "0.10", "1.0" ] },
             "pulseaudio": "boolean",
             "mediaplayer-backend": { "type": "string", "values": [ "directshow", "wmf" ] },
