Do not ignore tst_*.qml
Change-Id: I55c045909dd0eeac86160ca989ce893ed2816483
Reviewed-by: Andy Shaw <andy.shaw@qt.io>

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ src/multimediawidgets/qtmultimediawidgetsversion.h
 #
 tst_*
 !tst_*.cpp
+!tst_*.qml
 tests/auto/cmake/build
 
 # Generated static plugin import sources
