--- a/src/multimedia/configure.json
+++ b/src/multimedia/configure.json
@@ -256,7 +256,7 @@
         },
         "gstreamer_gl": {
             "label": "GStreamer OpenGL",
-            "condition": "features.gstreamer_1_0 && libs.gstreamer_gl_1_0",
+            "condition": "features.opengl && features.gstreamer_1_0 && libs.gstreamer_gl_1_0",
             "output": [ "privateFeature" ]
         },
         "gstreamer_imxcommon": {
