Fix the build with -no-gui
Task-number: QTBUG-74602
Change-Id: If2e4c8ad9822999e9fe4c5d8dd820cc78e1e1924
Reviewed-by: VaL Doroshchuk <valentyn.doroshchuk@qt.io>

--- a/src/multimedia/configure.json
+++ b/src/multimedia/configure.json
@@ -3,6 +3,7 @@
     "depends": [
         "gui"
     ],
+    "condition": "module.gui",
     "testDir": "../../config.tests",
 
     "commandline": {
