Remove gstreamer-0.10 code paths
In fact, require gstreamer 1.12 as the minimum version.

Change-Id: Iad7239dc3907ffceca1454b80f982f8f04aea518
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/configure.json
+++ b/src/multimedia/configure.json
@@ -12,7 +12,7 @@
             "evr": { "type": "boolean" },
             "directshow": { "type": "boolean" },
             "wmf": { "type": "boolean" },
-            "gstreamer": { "type": "optionalString", "values": [ "no", "yes", "0.10", "1.0" ] },
+            "gstreamer": { "type": "optionalString", "values": [ "no", "yes" ] },
             "pulseaudio": "boolean"
         }
     },
@@ -39,15 +39,6 @@
                 { "libs": "-lstrmiids -ldmoguids -luuid -lmsdmo -lole32 -loleaut32" }
             ]
         },
-        "gstreamer_0_10": {
-            "label": "GStreamer 0.10",
-            "export": "gstreamer",
-            "test": "gstreamer",
-            "sources": [
-                { "type": "pkgConfig",
-                  "args": "gstreamer-0.10 gstreamer-base-0.10 gstreamer-audio-0.10 gstreamer-video-0.10 gstreamer-pbutils-0.10 gstreamer-interfaces-0.10" }
-            ]
-        },
         "gstreamer_1_0": {
             "label": "GStreamer 1.0",
             "export": "gstreamer",
@@ -60,15 +51,6 @@
                 { "libs": "", "condition": "config.android && input.gstreamer != ''" }
             ]
         },
-        "gstreamer_app_0_10": {
-            "label": "GStreamer App 0.10",
-            "export": "gstreamer_app",
-            "test": "gstreamer_appsrc",
-            "use": "gstreamer_0_10",
-            "sources": [
-                { "type": "pkgConfig", "args": "gstreamer-app-0.10" }
-            ]
-        },
         "gstreamer_app_1_0": {
             "label": "GStreamer App 1.0",
             "export": "gstreamer_app",
@@ -78,15 +60,6 @@
                 { "type": "pkgConfig", "args": "gstreamer-app-1.0" },
                 { "libs": "-lgstapp-1.0", "condition": "config.win32 || config.macos" },
                 { "libs": "", "condition": "config.android && input.gstreamer != ''" }
-            ]
-        },
-        "gstreamer_photography_0_10": {
-            "label": "GStreamer Photography 0.10",
-            "export": "gstreamer_photography",
-            "test": "gstreamer_photography",
-            "use": "gstreamer_0_10",
-            "sources": [
-                { "libs": "-lgstphotography-0.10" }
             ]
         },
         "gstreamer_photography_1_0": {
@@ -188,27 +161,20 @@
             "condition": "config.win32 && tests.evr",
             "output": [ "feature", "privateFeature" ]
         },
-        "gstreamer_0_10": {
-            "label": "GStreamer 0.10",
-            "disable": "input.gstreamer == '1.0' || input.gstreamer == 'no'",
-            "enable": "input.gstreamer == '0.10'",
-            "condition": "!features.gstreamer_1_0 && libs.gstreamer_0_10",
-            "output": [ "privateFeature" ]
-        },
         "gstreamer_1_0": {
             "label": "GStreamer 1.0",
-            "disable": "input.gstreamer == '0.10' || input.gstreamer == 'no'",
-            "enable": "input.gstreamer == '1.0'",
+            "disable": "input.gstreamer == 'no'",
+            "enable": "input.gstreamer == 'yes'",
             "condition": "libs.gstreamer_1_0",
             "output": [ "privateFeature" ]
         },
         "gstreamer": {
-            "condition": "features.gstreamer_1_0 || features.gstreamer_0_10",
+            "condition": "features.gstreamer_1_0",
             "output": [ "privateFeature" ]
         },
         "gstreamer_app": {
             "label": "GStreamer App",
-            "condition": "(features.gstreamer_1_0 && libs.gstreamer_app_1_0) || (features.gstreamer_0_10 && libs.gstreamer_app_0_10)",
+            "condition": "(features.gstreamer_1_0 && libs.gstreamer_app_1_0)",
             "output": [ "privateFeature" ]
         },
         "gstreamer_encodingprofiles": {
@@ -218,7 +184,7 @@
         },
         "gstreamer_photography": {
             "label": "GStreamer Photography",
-            "condition": "(features.gstreamer_1_0 && libs.gstreamer_photography_1_0) || (features.gstreamer_0_10 && libs.gstreamer_photography_0_10)",
+            "condition": "(features.gstreamer_1_0 && libs.gstreamer_photography_1_0)",
             "output": [ "privateFeature" ]
         },
         "gstreamer_gl": {
@@ -274,7 +240,6 @@
             "entries": [
                 "alsa",
                 "gstreamer_1_0",
-                "gstreamer_0_10",
                 "linux_v4l",
                 "pulseaudio",
                 "mmrenderer",
