Remove the plugin infrastructure for audio plugins
Move the PulseAudio and ALSA code directly into Qt Multimedia. The
other plugins will follow in the next commits.

Change-Id: I59471fa65639ccc746e6fa182d34373f6f901199
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/configure.json
+++ b/src/multimedia/configure.json
@@ -142,7 +142,7 @@
     "features": {
         "alsa": {
             "label": "ALSA",
-            "condition": "config.unix && !config.qnx && libs.alsa",
+            "condition": "config.unix && !config.qnx && libs.alsa && !libs.pulseaudio",
             "output": [ "feature", "privateFeature" ]
         },
         "avfoundation": {
