Disable the gstreamer mediacapture plugin
camerabin is providing the same service and is more complete.
Don't delete the code yet as there are a few things that
should probably be added to the camerbin plugin.

Change-Id: I2399a6b45b83fb42f0bd5869575cc775f887207a
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Doris Verria <doris.verria@qt.io>

--- a/src/plugins/gstreamer/CMakeLists.txt
+++ b/src/plugins/gstreamer/CMakeLists.txt
@@ -3,4 +3,4 @@
 add_subdirectory(audiodecoder)
 add_subdirectory(camerabin)
 add_subdirectory(mediaplayer)
-add_subdirectory(mediacapture)
+#add_subdirectory(mediacapture)
