--- a/tests/auto/unit/CMakeLists.txt
+++ b/tests/auto/unit/CMakeLists.txt
@@ -9,7 +9,7 @@ add_subdirectory(qaudionamespace)
 add_subdirectory(qcamera)
 add_subdirectory(qcamerainfo)
 add_subdirectory(qcameraimagecapture)
-add_subdirectory(qmediabindableinterface)
+add_subdirectory(qmediasink)
 add_subdirectory(qmediacontainercontrol)
 add_subdirectory(qmediacontent)
 add_subdirectory(qmediaobject)
