--- a/tests/auto/unit/CMakeLists.txt
+++ b/tests/auto/unit/CMakeLists.txt
@@ -12,7 +12,7 @@ add_subdirectory(qcameraimagecapture)
 add_subdirectory(qmediasink)
 add_subdirectory(qmediacontainercontrol)
 add_subdirectory(qmediacontent)
-add_subdirectory(qmediaobject)
+add_subdirectory(qmediasource)
 add_subdirectory(qmediaplayer)
 add_subdirectory(qmediaplaylist)
 add_subdirectory(qmediapluginloader)
