Use gstreamer for audio
This is a basic implementation of the audio classes using
gstreamer. The code still has bugs and needs further work,
but this is good enough for now.

With this change, we can remove the alsa/pulseaudio code
paths and start getting rid of the plugin architecture as
a whole.

Change-Id: I5469d13991071ef28d35f63aa3c15539334db15e
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -245,6 +245,11 @@ qt_add_docs(Multimedia
 
 qt_extend_target(Multimedia CONDITION QT_FEATURE_gstreamer
     SOURCES
+        qaudiodeviceinfo_gstreamer.cpp qaudiodeviceinfo_gstreamer_p.h
+        qaudioengine_gstreamer.cpp qaudioengine_gstreamer_p.h
+        qaudioinput_gstreamer.cpp qaudioinput_gstreamer_p.h
+        qaudiointerface_gstreamer.cpp qaudiointerface_gstreamer_p.h
+        qaudiooutput_gstreamer.cpp qaudiooutput_gstreamer_p.h
         gstreamer/qgstcodecsinfo.cpp qgstcodecsinfo_p.h
         gstreamer/qgstreameraudioinputselector.cpp gstreamer/qgstreameraudioinputselector_p.h
         gstreamer/qgstreameraudioprobecontrol.cpp gstreamer/qgstreameraudioprobecontrol_p.h
