Move the gsttools into Qt Multimedia
Let's not have a separate helper lib for those. The longer
term goal is to get rid of platform specific plugins anyway.

Change-Id: I24c9e984c696a4ecfc4693413ad51264f6926afe
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimedia/video/android/gstreamer/CMakeLists.txt
+++ b/examples/multimedia/video/android/gstreamer/CMakeLists.txt
@@ -42,6 +42,7 @@ target_link_libraries(gstreamer PUBLIC
     Qt::Gui
     Qt::Multimedia
     Qt::MultimediaWidgets
+    Qt::MultimediaWidgetsPrivate
     Qt::Quick
     avcodec
     avfilter
@@ -78,7 +79,6 @@ target_link_libraries(gstreamer PUBLIC
     gstwavparse
     gstx264
     mpg123
-    multimediagsttoolsPrivate
     ogg
     soup-2.4
     swresample
