--- a/src/plugins/gstreamer/camerabin/CMakeLists.txt
+++ b/src/plugins/gstreamer/camerabin/CMakeLists.txt
@@ -34,7 +34,7 @@ qt_internal_add_plugin(CameraBinServicePlugin
         Qt::MultimediaPrivate
         Qt::Network
         gstreamer
-        multimediagsttoolsPrivate
+        Qt::MultimediaPrivate
 )
 
 #### Keys ignored in scope 1:.:.:camerabin.pro:<TRUE>:
