--- a/src/plugins/gstreamer/mediaplayer/CMakeLists.txt
+++ b/src/plugins/gstreamer/mediaplayer/CMakeLists.txt
@@ -21,7 +21,7 @@ qt_internal_add_plugin(QGstreamerPlayerServicePlugin
         Qt::MultimediaPrivate
         Qt::Network
         gstreamer
-        multimediagsttoolsPrivate
+        Qt::MultimediaPrivate
 )
 
 #### Keys ignored in scope 1:.:.:mediaplayer.pro:<TRUE>:
