Add stubs for the new backend architecture for capture and player
Just some stubs now, they'll replace the QMediaService implementations
for player and capture.

Change-Id: Ie1a1d9b8448181aad55024d1610d04903813404a
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -52,8 +52,10 @@ qt_internal_add_module(Multimedia
         controls/qvideoencodersettingscontrol.cpp controls/qvideoencodersettingscontrol.h
         controls/qvideorenderercontrol.cpp controls/qvideorenderercontrol.h
         controls/qvideowindowcontrol.cpp controls/qvideowindowcontrol.h
+        platform/qmediaplatformcaptureinterface.cpp platform/qmediaplatformcaptureinterface_p.h
         platform/qmediaplatformdevicemanager.cpp platform/qmediaplatformdevicemanager_p.h
         platform/qmediaplatformintegration.cpp platform/qmediaplatformintegration_p.h
+        platform/qmediaplatformplayerinterface.cpp platform/qmediaplatformplayerinterface_p.h
         playback/qmediaplayer.cpp playback/qmediaplayer.h
         playback/qmediaplaylist.cpp playback/qmediaplaylist.h playback/qmediaplaylist_p.h
         playback/qplaylistfileparser.cpp playback/qplaylistfileparser_p.h
