Add find modules for 3rd party libraries and fix CMake files
Detect gstreamer, avfoundation, pulseaudio, alsa,
mmrenderer and wmf with cmake. Regenerate and adjust configure.cmake
and CMakeLists.txt files accordingly.

Change-Id: I550136909498d3870e0babd6294652774a718f64
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ project(QtMultimedia
 )
 
 # special case begin
-find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Core Gui Network)
-# find_package(Qt6 ${PROJECT_VERSION} CONFIG OPTIONAL_COMPONENTS SET_ME_TO_SOMETHING_USEFUL)
+find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Core)
+find_package(Qt6 ${PROJECT_VERSION} QUIET CONFIG OPTIONAL_COMPONENTS Gui Network Widgets Quick Qml OpenGL OpenGLWidgets QuickTest)
 # special case end
 
 if(NOT TARGET Qt::Gui)
