--- a/tests/auto/unit/CMakeLists.txt
+++ b/tests/auto/unit/CMakeLists.txt
@@ -11,7 +11,7 @@ add_subdirectory(qcamerainfo)
 add_subdirectory(qcameraimagecapture)
 add_subdirectory(qmediasink)
 add_subdirectory(qmediacontainercontrol)
-add_subdirectory(qmediacontent)
+# add_subdirectory(qmediacontent)
 add_subdirectory(qmediasource)
 add_subdirectory(qmediaplayer)
 add_subdirectory(qmediaplaylist)
