--- a/examples/multimedia/spectrum/CMakeLists.txt
+++ b/examples/multimedia/spectrum/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Generated from spectrum.pro.
 
 add_subdirectory(app)
-if(NOT DEFINES___contains___DISABLE_FFT)
+if(BUILD_SHARED_LIBS) # special case
     add_subdirectory(3rdparty/fftreal)
 endif()
